# llm_wiki_team

./: .gitignore  .gitmodules  .graphify_semantic_new.json  Cargo.toml  LICENSE  README.md
docs/plans/: 2026-05-01-mcp-interface-design.md
graphify-out/: .graphify_chunk_01.json  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
openspec/changes/archive/2026-05-05-add-mcp-server/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-05-add-mcp-server/specs/mcp-config/: spec.md
openspec/changes/archive/2026-05-05-add-mcp-server/specs/mcp-server/: spec.md
openspec/changes/archive/2026-05-05-add-mcp-server/specs/mcp-tools/: spec.md
openspec/specs/mcp-config/: spec.md
openspec/specs/mcp-server/: spec.md
openspec/specs/mcp-tools/: spec.md
tests/: README.md  _utils.py  conftest.py  pytest.ini
tests/changes/add-mcp-server/: README.md  conftest.py  test_mcp_config.py  test_mcp_server.py  test_mcp_stdio.py  test_mcp_tools.py
